refactor: ajustes na segurança para permitir acesso ao swagger